<resources>
    <string name="app_name">Trip Assistant</string>

    <!-- Title -->
    <string name="title_trips_list">Trips</string>
    <string name="title_trip_details">Trip Details</string>
    <string name="title_trip_event">Trip Event</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_trip">Trip</string>
    <string name="title_user">User</string>
    <string name="title_delete">Delete</string>

    <!-- Menu -->
    <string name="menu_add_trip">Add Trip</string>
    <string name="menu_edit_trip">Edit Trip</string>
    <string name="menu_delete_trip">Delete Trip</string>
    <string name="menu_save_trip">Save Trip</string>
    <string name="menu_add_trip_event">Add Trip Event</string>
    <string name="menu_edit_trip_event">Edit Trip Event</string>
    <string name="menu_delete_trip_event">Delete Trip Event</string>
    <string name="menu_save_trip_event">Save Trip Event</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_show_user">Show User</string>

    <!-- Button -->
    <string name="add_event">Add Event</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="start_date">Start Date: %s</string>
    <string name="finish_date">Finish Date: %s</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign out</string>

    <!-- Hint -->
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>
    <string name="hint_comment">Comment</string>

    <!-- Error -->
    <string name="error_name_not_valid">Field should have at least five chars</string>
    <string name="error_input_not_empty">Field must be not empty</string>
    <string name="error_dates_invalid">Dates should be equal or represent period of time</string>

    <!-- Near Future -->
    <string name="feature_that_require_implementation">This feature will be implemented on Monday</string>

</resources>