<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".trip.TripActivity">

    <item
        android:id="@+id/action_edit_trip_event"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_edit_trip_event"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        android:title="@string/menu_cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save_trip_event"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_save_trip_event"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_trip_event"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete_trip_event"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_user"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_show_user"
        app:showAsAction="ifRoom" />

</menu>