<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.anokmik.tripassistant.user.login.LoginPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{@string/error_name_not_valid}"
            app:showError="@{!presenter.firstNameValid}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:text="@={presenter.firstName}" />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/space_small" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{@string/error_name_not_valid}"
            app:showError="@{!presenter.lastNameValid}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:text="@={presenter.lastName}" />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/space_large" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> presenter.login()}"
            android:text="@string/login" />

    </LinearLayout>

</layout>