<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.anokmik.tripassistant.util.ViewUtils" />

        <import type="com.anokmik.tripassistant.util.DateUtils" />

        <variable
            name="presenter"
            type="com.anokmik.tripassistant.trip.event.TripEventPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editable="@{presenter.isEditing}"
            app:error="@{@string/error_input_not_empty}"
            app:showError="@{!presenter.nameValid}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:text="@={presenter.observableTripEvent.name}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{ViewUtils.show(presenter.isEditing, presenter.observableTripEvent.comment)}"
            app:editable="@{presenter.isEditing}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment"
                android:text="@={presenter.observableTripEvent.comment}" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{presenter.isEditing}"
                android:onClick="@{() -> presenter.showStartDatePicker()}"
                android:text="@{@string/start_date(DateUtils.toString(presenter.observableTripEvent.startDate))}" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{presenter.isEditing}"
                android:onClick="@{() -> presenter.showFinishDatePicker()}"
                android:text="@{@string/finish_date(DateUtils.toString(presenter.observableTripEvent.finishDate))}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> presenter.takePhoto()}"
                android:text="@string/take_photo"
                android:visibility="@{ViewUtils.show(presenter.isEditing)}" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> presenter.pickPhoto()}"
                android:text="@string/pick_photo"
                android:visibility="@{ViewUtils.show(presenter.isEditing)}" />

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:items="@{presenter.photoAttachments}"
            app:viewHolderPresenter="@{presenter.viewHolderPresenter}" />

    </LinearLayout>

</layout>