<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.anokmik.tripassistant.util.ViewUtils" />

        <import type="com.anokmik.tripassistant.util.DateUtils" />

        <variable
            name="decoration"
            type="android.support.v7.widget.RecyclerView.ItemDecoration" />

        <variable
            name="layoutManager"
            type="android.support.v7.widget.RecyclerView.LayoutManager" />

        <variable
            name="presenter"
            type="com.anokmik.tripassistant.trip.details.TripDetailsPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editable="@{presenter.isEditing}"
            app:error="@{@string/error_input_not_empty}"
            app:showError="@{!presenter.titleValid}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:singleLine="true"
                android:text="@={presenter.observableTrip.title}" />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/space_small" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{ViewUtils.show(presenter.isEditing, presenter.observableTrip.description)}"
            app:editable="@{presenter.isEditing}">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:maxLines="3"
                android:text="@={presenter.observableTrip.description}" />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/space_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{presenter.isEditing}"
                android:onClick="@{() -> presenter.showStartDatePicker()}"
                android:text="@{@string/start_date(DateUtils.toString(presenter.observableTrip.startDate))}" />

            <include layout="@layout/space_small" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="@{presenter.isEditing}"
                android:onClick="@{() -> presenter.showFinishDatePicker()}"
                android:text="@{@string/finish_date(DateUtils.toString(presenter.observableTrip.finishDate))}" />

        </LinearLayout>

        <include layout="@layout/space_medium" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:decoration="@{decoration}"
            app:items="@{presenter.tripEvents}"
            app:layoutManager="@{layoutManager}"
            app:viewHolderPresenter="@{presenter.viewHolderPresenter}" />

        <include
            layout="@layout/space_small"
            android:visibility="@{ViewUtils.showForViewMode(presenter.isEditing, presenter.mode)}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> presenter.addEvent()}"
            android:text="@string/add_event"
            android:visibility="@{ViewUtils.showForViewMode(presenter.isEditing, presenter.mode)}" />

    </LinearLayout>

</layout>